fix shadows on mobile

--- a/www/style.css
+++ b/www/style.css
@@ -382,7 +382,7 @@ ul.feed-list, .feed-container {
     align-items: center;
   }
 
-  .item { max-width: 100%; border-radius: 10px; margin: 1em auto; float: none; }
+  .item { box-shadow: 1px 1px 50px 1px var(--card-shadow-color); max-width: 100%; border-radius: 10px; margin: 1em auto; float: none; }
   .itemtitle { font-size: 1.25rem !important;
     padding: 1em 3rem 0.5em 0.75em;
   }
@@ -396,7 +396,7 @@ ul.feed-list, .feed-container {
   body, html { font-size: 16px; }
   p { font-size: 1rem !important; line-height: 1.5 !important; }
   .pubdate,.itemfrom { padding-right: 0.5em; }
-  .item { max-width: 90%; border-radius: 30px; margin: 1.5em auto; float: none; }
+  .item { box-shadow: 1px 1px 50px 1px var(--card-shadow-color); max-width: 90%; border-radius: 30px; margin: 1.5em auto; float: none; }
   .itemtitle { font-size: 1.5rem !important;
     padding: 0.75em 2.5rem 0.2em 1.2em;
   }
